[ApiModel] Add new database design and lookup
This will improve the speed of initial loading considerably since we only read a continuous byte array and do not build up any maps. In a follow up we may be able to do direct indexing into the R8 jar for "pay-as-you-go" cost for looking up api levels.

Bug: b/213552119
Bug: b/207452750
Change-Id: Icd9479805df5952124c88e534fb51069179188d8